# Telegram_signals

./: .env.example  .gitignore  PRD_Fase_2_Metriche_detailed-1.md  PRD_Fase_3_MultiTrader_detailed-1.md  PRD_Fase_4_UI_detailed-1.md  README.md  REPO_STRUCTURE.md  TASKS.md  TASKS_Fase_1_MVP-1.md  pyproject.toml
.claude/hooks/: session-start.sh
agents/: AGENT_GUIDE.md  UNIFIED_AGENT_PROMPT.md
agents/phase_0_setup/: GAPS_RISKS.md  INSTRUCTIONS.md  STATUS.md
agents/phase_1_mvp/: GAPS_RISKS.md  INSTRUCTIONS.md  REVIEW_F1_2026-04-02.md  STATUS.md
agents/phase_2_metrics/: GAPS_RISKS.md  INSTRUCTIONS.md  REVIEW_F2_2026-04-02.md  STATUS.md
agents/phase_3_multitrader/: GAPS_RISKS.md  INSTRUCTIONS.md  REVIEW_F3_2026-04-02.md  STATUS.md
agents/phase_4_ui/: GAPS_RISKS.md  INSTRUCTIONS.md  STATUS.md
agents/phase_5_reliability/: PLAN_F5_COMPLETAMENTO_2026-04-02.md
config/: config.example.yaml
docs/: ANALISI_DOCUMENTAZIONE_TASK_AGENTI.md  COME_SVILUPPARE_CON_AGENTI.md  Concept_trading_manual_events_v04.md  PRD_Fase_1_MVP_detailed-1.md  PRD_Fase_2_Metriche_detailed-1.md  PRD_MASTER_detailed.md  PRD_trading_manual_signal_v04.md  PROMPT_PACK_SVILUPPO_COMPLETO.md
docs/tasks/: master.yaml
scripts/: render_tasks_docs.py  run_dev.sh  setup.sh
src/: config.py  main.py
src/db/: models.py  position_repository.py  session.py
src/dispatcher/: dispatcher.py
src/events/: models.py  normalizer.py  types.py
src/exchange/: base_listener.py  binance_listener.py  bybit_listener.py  ccxt_client.py  listener_manager.py
src/metrics/: calculator.py  config.py  models.py
(+36 files in other folders)
